# MY-BOOK

./: .env.example  .gitignore  URDU_TRANSLATION_FEATURE.md  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
BACKEND/: .flake8  .gitignore  add_dummy_book.py  check_qdrant.py  check_qdrant_count.py  check_qdrant_doc.py  check_qdrant_help.py  list_gemini_models.py  main.py  pyproject.toml  setup.cfg  setup_qdrant_index.py  start_backend.bat  test_qdrant_query.py
BACKEND/.specify/memory/: constitution.md
BACKEND/backend_env/: pyvenv.cfg
BACKEND/backend_env/Scripts/: activate  activate.bat
BACKEND/demo/: demo_book.html
BACKEND/docs/: api.md
BACKEND/history/prompts/book-rag-chatbot/: 002-create-feature-spec.spec.prompt.md  003-create-implementation-plan.plan.prompt.md  004-generate-implementation-tasks.tasks.prompt.md  005-execute-implementation-plan.red.prompt.md
BACKEND/history/prompts/constitution/: 001-update-constitution.constitution.prompt.md
BACKEND/scripts/: validate_quickstart.py
BACKEND/specs/001-book-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
BACKEND/specs/001-book-rag-chatbot/checklists/: requirements.md
BACKEND/specs/001-book-rag-chatbot/contracts/: api-contracts.md
BACKEND/src/api/: book_routes.py  history_routes.py  main.py  query_routes.py  translation_routes.py
BACKEND/src/config/: settings.py
BACKEND/src/db/: init_db.py  postgres_client.py  qdrant_setup.py  schema.py
BACKEND/src/middleware/: auth.py
BACKEND/src/models/: book_content.py  generated_response.py  query_history.py  retrieved_context.py  user_query.py  user_selection.py
BACKEND/src/pipeline/: book_ingestion.py
BACKEND/src/services/: book_content_service.py  cohere_service.py  frontend_routes.py  gemini_service.py  openrouter_service.py  postgres_service.py  qdrant_service.py  rag_service.py  translation_service.py
BACKEND/src/utils/: embedding_utils.py  error_handling.py  logging.py  performance.py  text_chunker.py
BACKEND/tests/accuracy/: test_accuracy.py
BACKEND/tests/contract/: test_query_endpoint.py
BACKEND/tests/integration/: test_rag_flow.py
BACKEND/tests/unit/: test_cohere_service.py
docs/: intro.md
docs/module-1-ros2/: 1chapter-2-jetson-setup.mdx
frontend/: package.json
src/: client.js
(+57 files in other folders)
