[project]
name = "docusaurus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "axios>=0.4.0",
    "beautifulsoup4>=4.14.3",
    "better-auth>=0.0.1b11",
    "cohere>=5.20.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "jose>=1.0.0",
    "lxml>=6.0.2",
    "openai-agents>=0.6.4",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "uvicorn>=0.40.0",
]
